--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "<h2>Installing PHP</h2>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch" : "npx tailwindcss -i ./src/global.css -o ./src/dist/output.css --watch && npx tailwindcss -i ./src/global1.css -o ./src/dist/output1.css --watch",
+    "dev" : "php -S localhost:5500"
   },
   "repository": {
     "type": "git",
